--- a/aug21/student1/index.html
+++ b/aug21/student1/index.html
@@ -20,6 +20,8 @@
 
 <p id=”fancy”>Another paragraph about you which will be styled with css. Add a hyperlink here if you’d like. Check out http://www.w3schools.com/html/html_links.asp for more information.</p>
 
+<img src="https://static.pexels.com/photos/111154/pexels-photo-111154.jpeg"</img>
+<img src="https://static.pexels.com/photos/5055/sea-sky-beach-holiday.jpeg"</img>
 </section>
 
 <footer>
