--- a/sept18/brad/index.html
+++ b/sept18/brad/index.html
@@ -8,7 +8,7 @@
 		<!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 		
-		<title>My Website</title>
+		<title>Brad Benson | BH Digital Services | BHHS</title>
 		
 		<!--Google Fonts-->
 		<link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
@@ -40,24 +40,20 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">Project name</a>
+              <a class="navbar-brand" href="http://www.bhhsamb.com/">Berkshire Home Services - Call US Today!  402-493-4663</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
-                <li class="dropdown">
+                <li class="active"><a href="http://www.bhhsamb.com/search/41.88183137050558;-97.94448852539062;40.233411907115055;-94.66781616210938/v_Hybrid">Find A Home</a></li>
+                <li><a href="http://www.bhhsamb.com/search/directory/">Find A Realitor</a></li>
+                <li><a href="http://www.bhhsamb.com/Contact_Us">Contact BHHS</a></li>
+                <li class="Resources">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                    <li><a href="#">Action</a></li>
-                    <li><a href="#">Another action</a></li>
-                    <li><a href="#">Something else here</a></li>
-                    <li role="separator" class="divider"></li>
-                    <li class="dropdown-header">Nav header</li>
-                    <li><a href="#">Separated link</a></li>
-                    <li><a href="#">One more separated link</a></li>
-                  </ul>
+                    <li><a href="http://www.bhhsamb.com/Learn/Buying_A_Home">Buying A Home</a></li>
+                    <li><a href="http://www.bhhsamb.com/Learn/Selling_A_Home">Selling A Home</a></li>
+                    <li><a href="http://www.bhhsamb.com/Learn/Our_Services">Our Services</a></li>
+                    </ul>
                 </li>
               </ul>
             </div>
